# casualcms

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Justfile  README.rst  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  rome.json  tsconfig.json
assets/: favicon.xcf
casualcms.com/: _models.py  models.py
casualcms.com/models/: layout.jinja2
casualcms.com/models/atoms/: breadcrumb.jinja2  link.py  list_block.jinja2  list_block.py  snippet_chooser.jinja2  snippet_chooser.py
casualcms.com/models/molecules/: breadcrumb.jinja2  card.jinja2  card.py  paragraph.py
casualcms.com/models/pages/: index.jinja2  index.py
casualcms.com/models/snippets/: header.jinja2  header.py  menu.jinja2  menu.py
casualcms.com/templates/: category.jinja2  columns.jinja2  header.jinja2  index.jinja2  layout.jinja2  paragraph.jinja2
casualcms.com/templates/blog/: index.jinja2
casualcms.com/templates/documentation/: blogpage.jinja2  index.jinja2  menu.jinja2  nav.jinja2
sql-migrations/: env.py  script.py.mako
sql-migrations/versions/: 0e3023c341fb_create_the_pages_table.py  774794be5cbb_rename_column_slug_in_snippet.py  dcb958336595_remove_useless_column.py
src/casualcms/: __init__.py  config.py  entrypoint.py  ui.py  utils.py
src/casualcms/adapters/: fastapi.py  jinja2.py  resolver.py  uow_inmemory.py
src/casualcms/admin/: index.46254d06.js  index.46254d06.js.map  index.60d3a302.js  index.60d3a302.js.map  index.6556769d.js  index.6556769d.js.map  index.902d384b.css  index.902d384b.css.map  index.caf7ccf3.js  index.caf7ccf3.js.map  index.e64adecd.js  index.e64adecd.js.map  index.e6f7f6ea.js  index.e6f7f6ea.js.map  index.html
src/casualcms/api/: __init__.py  authntoken.py  base.py  draft.py  page.py  page_template.py  page_type.py  setting.py  setting_type.py  site.py  snippet.py  snippet_type.py  template.py
src/casualcms/bootstrap/: bootstrap.py  scanner.py
src/frontend/: App.tsx  config.ts  index.html  index.tsx
src/webapp/: App.tsx  index.tsx
tests/casualblog/: models.py
tests/frontend/: app.test.tsx  config.ts  helpers.tsx  login.test.tsx  page_edit.test.tsx  page_template.test.tsx
tests/functionals/: 01_login.feature  10_create_page.feature  15_delete_page.feature  20_create_site.feature  20_create_snippet.feature  30_create_site.feature  35_delete_site.feature  40_create_setting.feature  50_nav_breadcrumb.feature  80_display_public_page.feature  80_publish_page.feature  99_debug.feature  environment.py  fixtures.py  login.feature  typing.py
tests/unittests/: conftest.py  fixtures.py  long_text.py  test_api_accounts.py  test_api_authntokens.py  test_api_drafts.py  test_api_pages.py  test_api_pages_types.py  test_api_settings.py  test_api_settings_types.py  test_api_sites.py  test_api_snippet_types.py  test_api_snippets.py  test_api_snippets_types.py  test_api_template.py  test_casualcms.py  test_config.py  test_frontend_view.py  test_message_commands.py  test_messagebus.py  test_models.py  test_models_account.py  test_models_block.py  test_models_page.py  test_models_site.py  test_models_snippet.py  test_resolver.py  test_template_render.py  test_template_renderer.py  test_unit_of_work.py  test_utils.py
tests/webapp/: account_menu.test.tsx  app.test.tsx  breadcrumb.test.tsx  config.test.ts  config.ts  delete_popover.test.tsx  error404.test.tsx  errorApi.test.tsx  fake_api.ts  helpers.tsx  home.test.tsx  login.test.tsx  page_delete.test.tsx  page_edit.test.tsx  page_list.test.tsx  page_new.test.tsx  page_publish.test.tsx  page_template.test.tsx  page_types.test.tsx  setting_delete.test.tsx  setting_edit.test.tsx  setting_list.test.tsx  setting_new.test.tsx  setting_sites_list.test.tsx  setting_sites_list.tsx  sidebar.test.tsx  site_delete.test.tsx  site_edit.test.tsx  site_list.test.tsx  site_new.test.tsx  snippet_delete.test.tsx  snippet_edit.test.tsx  snippet_list.test.tsx  snippet_new.test.tsx  snippet_type.test.tsx
(+272 files in other folders)
