[tool.poetry]
name = "casualcms"
version = "0.1.0"
description = ""
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
result = "^0.7.0"
pytest-asyncio = "^0.18.3"
venusian = "^3.0.0"
hypercorn = "^0.13.2"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7"
mypy = "^0.942"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
types-setuptools = "^57.4.11"
behave = "^1.2.6"
selenium = "^4.2.0"
requests = "^2.27.1"
bcrypt = "^3.2.0"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
reportUnknownMemberType = false
reportUntypedFunctionDecorator = false
reportIncompatibleVariableOverride = false

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = "casualcms.*"
disallow_any_generics = true
disallow_untyped_defs = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = [
  "# coverage: ignore",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
